--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,8 +5,8 @@ on:
   pull_request:
 
 jobs:
-  test:
-    name: Test
+  preflight:
+    name: Preflight guardrails (fast-fail)
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5
@@ -17,8 +17,21 @@ jobs:
           cache: true
           cache-dependency-path: go.sum
 
-      - name: Compatibility + architecture contract checks
-        run: go test ./internal/controlplane/compat -count=1
+      - name: Run architecture guardrail gate
+        run: make architecture-guard GO=go
+
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    needs: preflight
+    steps:
+      - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5
+
+      - uses: actions/setup-go@40f1582b2485089dde7abd97c1529aa768e1baff
+        with:
+          go-version: "1.24"
+          cache: true
+          cache-dependency-path: go.sum
 
       - name: Run tests
         run: go test ./...
@@ -26,6 +39,7 @@ jobs:
   build:
     name: Build binaries
     runs-on: ubuntu-latest
+    needs: preflight
     env:
       CGO_ENABLED: 0
     steps:
@@ -62,6 +76,7 @@ jobs:
   lint:
     name: Lint
     runs-on: ubuntu-latest
+    needs: preflight
     steps:
       - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5
 
@@ -71,9 +86,6 @@ jobs:
           cache: true
           cache-dependency-path: go.sum
 
-      - name: Run architecture guardrail lint gate
-        run: make architecture-guard GO=go
-
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@55c2c1448f86e01eaae002a5a3a9624417608d84
         with:
@@ -82,7 +94,9 @@ jobs:
   e2e:
     name: E2E tests
     runs-on: ubuntu-latest
-    needs: build
+    needs:
+      - preflight
+      - build
     env:
       CGO_ENABLED: 0
     steps:
