--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -68,3 +68,99 @@ jobs:
             bin/checksums.txt
             install/install.sh
           body_path: release-notes.md
+
+  containers:
+    name: Build and push container images
+    runs-on: ubuntu-latest
+    needs: release
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5
+        with:
+          fetch-depth: 0
+          fetch-tags: true
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@29109295f81e9208d7d86ff1c6f54de6b5f02765 # v3.2.0
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@b5730b4e2f63e1eddcc82c8b83be8f76c30d394b # v3.7.1
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567 # v3.3.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Compute image tags
+        id: tags
+        run: |
+          VERSION="${{ github.ref_name }}"
+          COMMIT="${{ github.sha }}"
+          DATE="$(date -u +%Y-%m-%dT%H:%M:%SZ)"
+
+          CP_TAGS="ghcr.io/marcus-qen/legator-control-plane:${VERSION}"
+          PROBE_TAGS="ghcr.io/marcus-qen/legator-probe:${VERSION}"
+          CTL_TAGS="ghcr.io/marcus-qen/legatorctl:${VERSION}"
+
+          # :latest only for stable releases (no pre-release suffix)
+          if [[ "${VERSION}" != *"-"* ]]; then
+            CP_TAGS="${CP_TAGS},ghcr.io/marcus-qen/legator-control-plane:latest"
+            PROBE_TAGS="${PROBE_TAGS},ghcr.io/marcus-qen/legator-probe:latest"
+            CTL_TAGS="${CTL_TAGS},ghcr.io/marcus-qen/legatorctl:latest"
+          fi
+
+          echo "version=${VERSION}"   >> "$GITHUB_OUTPUT"
+          echo "commit=${COMMIT}"     >> "$GITHUB_OUTPUT"
+          echo "date=${DATE}"         >> "$GITHUB_OUTPUT"
+          echo "cp_tags=${CP_TAGS}"   >> "$GITHUB_OUTPUT"
+          echo "probe_tags=${PROBE_TAGS}" >> "$GITHUB_OUTPUT"
+          echo "ctl_tags=${CTL_TAGS}" >> "$GITHUB_OUTPUT"
+
+      - name: Build and push control-plane image
+        uses: docker/build-push-action@ca877d9245402d1e19e84b3f94b72e9df65a78f1 # v6.10.0
+        with:
+          context: .
+          file: Dockerfile.control-plane
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ${{ steps.tags.outputs.cp_tags }}
+          build-args: |
+            VERSION=${{ steps.tags.outputs.version }}
+            COMMIT=${{ steps.tags.outputs.commit }}
+            DATE=${{ steps.tags.outputs.date }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: Build and push probe image
+        uses: docker/build-push-action@ca877d9245402d1e19e84b3f94b72e9df65a78f1 # v6.10.0
+        with:
+          context: .
+          file: Dockerfile.probe
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ${{ steps.tags.outputs.probe_tags }}
+          build-args: |
+            VERSION=${{ steps.tags.outputs.version }}
+            COMMIT=${{ steps.tags.outputs.commit }}
+            DATE=${{ steps.tags.outputs.date }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: Build and push legatorctl image
+        uses: docker/build-push-action@ca877d9245402d1e19e84b3f94b72e9df65a78f1 # v6.10.0
+        with:
+          context: .
+          file: Dockerfile.legatorctl
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ${{ steps.tags.outputs.ctl_tags }}
+          build-args: |
+            VERSION=${{ steps.tags.outputs.version }}
+            COMMIT=${{ steps.tags.outputs.commit }}
+            DATE=${{ steps.tags.outputs.date }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
