--- a/Dockerfile.control-plane
+++ b/Dockerfile.control-plane
@@ -16,18 +16,23 @@ COPY . .
 
 RUN CGO_ENABLED=0 GOOS=linux go build \
     -ldflags="-s -w -X main.version=${VERSION} -X main.commit=${COMMIT} -X main.date=${DATE}" \
-    -o /probe ./cmd/probe
+    -o /control-plane ./cmd/control-plane
 
 # Stage 2: Runtime — minimal, nonroot, distroless
-# distroless/static-debian12:nonroot includes ca-certificates and a nonroot user (uid 65532)
 FROM gcr.io/distroless/static-debian12:nonroot
 
-LABEL org.opencontainers.image.title="Legator Probe" \
-      org.opencontainers.image.description="Lightweight probe agent for Legator" \
+LABEL org.opencontainers.image.title="Legator Control Plane" \
+      org.opencontainers.image.description="Central coordinator for Legator probe agents" \
       org.opencontainers.image.source="https://github.com/marcus-qen/legator" \
       org.opencontainers.image.licenses="Apache-2.0"
 
-COPY --from=builder /probe /usr/local/bin/probe
+COPY --from=builder /control-plane /usr/local/bin/control-plane
 
-ENTRYPOINT ["/usr/local/bin/probe"]
-CMD ["run", "--config-dir", "/etc/legator"]
+# Web assets (templates + static files) required at runtime
+COPY web/ /opt/legator/web/
+
+VOLUME /var/lib/legator
+
+EXPOSE 9080
+
+ENTRYPOINT ["control-plane"]
